# assemblycpp-v5

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: mainpage.dox
include/: assemblyCalculator.h  assemblyState.h  dagEnumeration.h  duplicateMatching.h  fragmentation.h  globalPrimitives.h  graphHashes.h  graphio.h  help.h  improvedBnB.h  ioflag.h  molGraph.h  molfileParser.h  pathwayGenerator.h  signalHandler.h  treeCanon.h  ufds.h  vf2.h
src/: assemblyCalculator.cpp  assemblyState.cpp  dagEnumeration.cpp  duplicateMatching.cpp  fragmentation.cpp  globalPrimitives.cpp  graphHashes.cpp  graphio.cpp  help.cpp  improvedBnB.cpp  ioflag.cpp  main.cpp  molGraph.cpp  molfileParser.cpp  pathwayGenerator.cpp  signalHandler.cpp  treeCanon.cpp  vf2.cpp
tests/: CMakeLists.txt  main.cpp  test_graphio.cpp  test_integration.cpp  test_molfileParser.cpp  test_sanity.cpp  test_utils.h
tests/data/: graphio_test.txt  tryptophan.molOut  tryptophan.molPathway  tryptophanOut  tryptophanPathway
tests/integration/: integration_test_data.csv
tests/integration/molfiles/: 1053.mol  1108.mol  1151.mol  1238.mol  1253.mol  1270.mol  1275.mol  1353.mol  1388.mol  1389.mol  1427.mol  1444.mol  1447.mol  1452.mol  1510.mol  1539.mol  1596.mol  1606.mol  1614.mol  1618.mol  1623.mol  1624.mol  1667.mol  1680.mol  1691.mol  1693.mol  1712.mol  1714.mol  1725.mol  1727.mol  174.mol  1746.mol  1752.mol  1753.mol  176.mol  1802.mol  1805.mol  1808.mol  1810.mol  1829.mol  (+459 more)
tests/speed/: inputs  output_summary.txt  speed_test_data  speedtest.py
tests/speed/molfiles/: YFWHP.mol  brucine.mol  erythromycin.mol  iodotaxol.mol
unitTests/: 113.mol  1149.mol  1209.mol  1220.mol  1236.mol  1268.mol  1329.mol  1330.mol  1336.mol  1351.mol  1398.mol  1450.mol  1471.mol  1475.mol  1486.mol  1508.mol  1629.mol  1637.mol  164.mol  1646.mol  166.mol  1679.mol  1698.mol  1716.mol  1728.mol  1759.mol  1765.mol  1767.mol  1785.mol  1801.mol  1809.mol  1823.mol  183.mol  1834.mol  1837.mol  1840.mol  1903.mol  1910.mol  196.mol  1969.mol  (+413 more)
v5/: assemblyState.h  dagEnumeration.h  duplicateMatching.h  fragmentation.h  globalPrimitives.h  graphHashes.h  graphio.h  help.h  improvedBnB.h  ioflag.h  main.cpp  molGraph.h  molfileParser.h  pathwayGenerator.h  signalHandler.h  treeCanon.h  ufds.h  vf2.h
